--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,9 @@ a{
 .three {
 	background-color: #D3D3D3;
 }
+.skip-links > li {
+	display: block;
+}
 @media only screen and (min-width: 25em) {
 li {
 	display: inline-block;
