--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,12 @@ a{
 	width: 35px;
 	height: 35px;
 	margin: 0;
-	padding: 0;}
+	padding: 0;
+	display: inline-block;
+}
+.footalign {
+	text-align: center;
+}
 .button {
 	border-radius: .55em;
 	text-align: center;
@@ -108,6 +113,9 @@ footer ol{
 }
 .four {
 	background-color: #D3D3D3;
+}
+.footalign {
+	text-align: right;
 }
 }
 @media only screen and (min-width: 60em) {
